@@ -60,6 +60,7 @@ EngineContext::EngineContext(EngineContext *parent, Skyscraper *frontend, Ogre::
 	raised = false;
 	progress = 0;
 	inside = false;
+	Moved = false;
 
 	//register this engine, and get it's instance number
 	instance = frontend->RegisterEngine(this);
@@ -266,9 +267,19 @@ std::string EngineContext::GetFilename()
 
 void EngineContext::StartSim()
 {
+	//get offset of parent engine
+	Ogre::Vector3 offset;
+	if (parent)
+		offset = parent->GetSystem()->GetPosition();
+	else
+		offset = Ogre::Vector3::ZERO;
+
+	if (position != Ogre::Vector3::ZERO)
+		Moved = true;
+
 	//Create simulator object
 	if (!Simcore)
-		Simcore = new ::SBS::SBS(mSceneManager, fmodsystem, instance, position, rotation, area_min, area_max);
+		Simcore = new ::SBS::SBS(mSceneManager, fmodsystem, instance, position + offset, rotation, area_min, area_max);
 
 	//load script processor
 	if (!processor)
@@ -305,6 +316,7 @@ void EngineContext::UnloadSim()
 	loading = false;
 	running = false;
 	raised = false;
+	Moved = false;
 }
 
 bool EngineContext::Start(Ogre::Camera *camera)
@@ -514,6 +526,10 @@ void EngineContext::CutForEngine(EngineContext *engine)
 
 	if (IsRunning() == true)
 		Simcore->Prepare();
+
+	//if this has a valid parent, have parent cut for the specified engine
+	if (frontend->IsValidEngine(parent) == true)
+		parent->CutForEngine(engine);
 }
 
 void EngineContext::AddChild(EngineContext *engine)
@@ -530,6 +546,23 @@ void EngineContext::RemoveChild(EngineContext *engine)
 		{
 			children.erase(children.begin() + i);
 			return;
+		}
+	}
+}
+
+void EngineContext::Move(Ogre::Vector3 &position, bool move_children)
+{
+	//move this engine
+	//if move_children is true, recursively call this function on all children
+
+	this->position += position;
+	Simcore->Move(position);
+
+	if (move_children == true)
+	{
+		for (int i = 0; i < (int)children.size(); i++)
+		{
+			children[i]->Move(position, move_children);
 		}
 	}
 }
