@@ -32,6 +32,7 @@ class EngineContext
 public:
 
 	bool Reload;
+	bool Moved; //true if engine has been moved on startup
 
 	EngineContext(EngineContext *parent, Skyscraper *frontend, Ogre::SceneManager* mSceneManager, FMOD::System *fmodsystem, const Ogre::Vector3 &position = Ogre::Vector3::ZERO, float rotation = 0.0f, const Ogre::Vector3 &area_min = Ogre::Vector3::ZERO, const Ogre::Vector3 &area_max = Ogre::Vector3::ZERO);
 	~EngineContext();
@@ -72,6 +73,7 @@ public:
 	void AddChild(EngineContext *engine);
 	void RemoveChild(EngineContext *engine);
 	void RemoveParent() { parent = 0; }
+	void Move(Ogre::Vector3 &position, bool move_children = false);
 
 private:
 
